package model;

public enum ShipType {
    CRUISER, AIRCRAFT, TORPEDO, SUBMARINE
}
