package model.constant;

public enum UpdateObserver {
    END_TURN, PLACE_SHIP, SAVE, LOAD, CHANGE_TACTIC, LAUNCH, BAD_LOAD, CREATE_GAME, GET_SHIP_INFO
}
