package model.game.era;

public abstract class Era {
}
