package model.game.era;

public class EraFactory {
}
