package model.game.player;

public class Human {
}
