package model.game.player;

public abstract class Player {
}
