package model.game.player;

public class PlayerFactory {
}
