package model.game.player.tactic;

public class RandomTactic {
}
