package model.game.ship;

public class Ship {
}
