@startuml

title Global diagram

class Observable{
    + setChanged()
    + notifyObserver(arg: int)
}

package model{

    class Move{
        {static} NONE_UUID: UUID
        x: int
        y: int
        direction: DirectionConstant
        type: ShipType
        ship: UUID
    }

    class Attack{
        x: int
        y: int
        ship: UUID
    }

    class GameFactory{
        + getPVEGame(era: Era): Game
        + getEVPGame(era: Era): Game
    }

    enum UpdateObserver{
        ENDTURN
        PLACESHIP
        SAVE
        LOAD
        CHANGETACTIC
    }

    enum ShipType{
        CRUISER
        AIRCRAFT
        TORPEDO
        SUBMARINE
    }

    enum DirectionConstant{
        UP
        LEFT
        RIGHT
        DOWN
    }

    class ShipShop{
        - requestedShip: UUID
        + createGame(era: Era, tactic: Tactic, humanIsFirst: boolean)
        + placeShip(move: Move): UUID
        + setTactic(player: int, tactic: Tactic)
        + drawShip(type: ShipType): Image
        + play(attack: Attack)
        + endPlacingShip()
        + save(file: File)
        + load(file: File): Game
        + getShip(uuid: UUID): Ship
    }

    package game{

        package era{

            class EraFactory{

            }

            abstract Era{
                + {abstract} getFleetFactory(): FleetFactory
                + {abstract} drawShip(type: ShipType): Image
            }

            class ModernEra{
                + getFleetFactory(): FleetFactory
                + drawShip(type: ShipType): Image
            }

            class XVIEra{
                + getFleetFactory(): FleetFactory
                + drawShip(type: ShipType): Image
            }

        }

        class Game{
            - {static} GRID_WIDTH: int
            - {static} GRID_HEIGHT: int
            - currentPlayer: int
            + Game(era: Era, p1: Player, p2: Player)
            + setTactic(player: int, tactic: Tactic)
            + drawShip(type: ShipType): Image
            + endPlacingShip()
            + placeShip(move: Move): UUID
            + play(attack: Attack): List<Attack>
            + getShip(uuid: UUID): Ship
            - next()
        }

        package grid{

            class Grid{
                - ennemyGrid: int[GRID_WIDTH][GRID_HEIGHT]
                + placeShip(move: Move)
                + canAttack(ship: UUID): boolean
                + getDmg(id: UUID): int
                + isDefeated(): boolean
                + isShip(x: int, y: int): boolean
                + getShip(uuid: UUID): Ship
                + crossTile(x: int, y: int)
                + flagTile(x: int, y: int)
                + hit(x: int, y: int)
            }

        }

        package ship{

            class Ship{

            }

            abstract FleetFactory{

            }

            class ModernFleet{

            }

            class XVIFleet{

            }

        }




        package player{

            class PlayerFactory{
                + getIA(era: Era)
                + getHuman(era: Era)
            }

            abstract Player{
                - ready: boolean
                + hit(x: int, y: int, dmg: int)
                + placeShip(move: Move): UUID
                + isDefeated(): boolean
                + canAttack(ship: UUID): boolean
                + {abstract} isHuman(): boolean
                + getBestMove(): Move
                + setTactic(tactic: Tactic)
                + getDmg(id: UUID): int
                + getShip(uuid: UUID): Ship
                + isReady(): boolean
                + setReady(val: boolean)
            }

            class Human{
                + isHuman(): boolean
            }

            class IA{
                + getBestMove(): Move
                + isHuman(): boolean
                + setTactic(tactic: Tactic)
            }

            package Tactic{

                interface Tactic{
                    + applyTactic(player: Player): Move
                }

                class RandomTactic{
                    + applyTactic(player: Player): Move
                }

                class CrossTactic{
                    + applyTactic(player: Player): Move
                }

            }

        }

    }

}


ShipShop --> "1" GameFactory: gameFactory
ShipShop --> "1" Game: - game
ShipShop -up-|> Observable

GameFactory ..> Game: create

Game --> "2" Player: - players

Grid --> "*" Ship: - ships

FleetFactory ..> Ship: "create"

PlayerFactory ..>  Player: "create"

Player --> "1" FleetFactory: - fleet
Player --> "1" Grid: - grid

ModernFleet --|> FleetFactory
XVIFleet --|> FleetFactory

Human --|> Player

IA --|> Player
Player --> "1" Tactic: - tactic

RandomTactic ..|> Tactic
CrossTactic ..|> Tactic

Game --> "1" Era: - era
EraFactory ..> Era: create

ShipShop --> "*" Attack: - requestedAttack

ModernEra --|> Era
XVIEra --|> Era

@enduml